# Miko

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  build_ninja.cmd  build_ninja.sh  config.json
CWS/: CMakeLists.txt  config.json
CWS/include/: CWSSpec.h  CWebSocket.h  WSMessage.h  WSURL.h  cws.h
CWS/src/: CWS-WebSocket.cpp  CWS.cpp  URL.cpp  WebSocket.cpp  cws.cpp  definitions.cpp  definitions.h
Compression/: CMakeLists.txt  RFC7932.txt  config.json
Compression/include/: CompressionSpec.h  NibbleReader.h  brotli.h  compression.h
Compression/src/: Brotli.cpp  Compression-Brotli.cpp  DllMain.c  DllMain.cpp  NibbleReader.cpp  StaticDictionary.cpp  StaticDictionary.h  compdef.h  definitions.h  dictionary.cpp  dictionary.h
Concurrency/: CMakeLists.txt  config.json
Concurrency/include/: ReentrantLock.h  concurrency.h  concurrencyspec.h
Concurrency/src/: DllMain.c  ReentrantLock.cpp  concurrency.cpp
Crypto/: CMakeLists.txt
Crypto/include/: crypto.h
Crypto/src/: BASE64.cpp  CRC.cpp  MD4.cpp  MD5.cpp  MessageDigest.cpp  SHA1.cpp  SHA224.cpp  SHA256.cpp  SHA256.h  SHA384.cpp  SHA512.cpp  definitions.cpp  definitions.h
Cryptography/: CMakeLists.txt  config.json
Cryptography/include/: CryptographySpec.h  MD4.h  MD5.h  MersenneTwister.h  MessageDigest.h  RNG.h  SHA1.h  SHA224.h  SHA256.h  SHA3.h  SHA384.h  SHA512.h  SHAKE.h  SecurityRandom.h  base64.h  crc.h  crypto.h
Cryptography/src/: BASE64.cpp  CNGRNG.h  CRC.cpp  CommonMessageDigest.cpp  CommonMessageDigest.h  DllMain.c  DllMain.cpp  Keccak.cpp  Keccak.h  MD4.cpp  MD5.cpp  MersenneTwister.cpp  MessageDigest.cpp  NibbleReader.cpp  RNG.cpp  SHA1.cpp  SHA224.cpp  SHA256.cpp  SHA256C.h  SHA3.cpp  SHA384.cpp  SHA3C.h  SHA512.cpp  SHA512.h  SHA512C.h  SHAC.c  SHAC.h  SHAKE.cpp  SPONGE.cpp  SecurityRandom.cpp  definitions.cpp  definitions.h  rotate.c  rotate.h
Exception/: CMakeLists.txt
Exception/include/: exception.h
Exception/src/: Eexception.cpp  Exception-exception-frame.cpp  Exception-exception.cpp  Exception.cpp  definitions.h  exce.cpp  exception.cpp  execdef.h  frame.cpp
FileSystem/: CMakeLists.txt
FileSystem/include/: filesystem.h
FileSystem/src/: file.cpp  filesystem.cpp  fsdef.h
Filesystem/: CMakeLists.txt  config.json
Filesystem/include/: filestream.h  filesystem.h  foreach_file.h  fsspec.h  standardstream.h
Filesystem/src/: DllMain.c  FileStream.cpp  Filesystem.cpp  Streaming.cpp  definitions.cpp  definitions.h  file.cpp  foreach.cpp  fsdef.cpp  standardstream.cpp
HTTP/: CMakeLists.txt  config.json
HTTP/include/: ConnectionManager.h  HTTPMessage.h  HTTPSec.h  HTTPURL.h  hhttp.h
HTTP/src/: ConnectionManager.cpp  HTTP-ConnectionManager.cpp  HTTP.cpp  Mesage.cpp  URL.cpp  definitions.h  httpdef.h
JSON/: CMakeLists.txt  config.json
JSON/include/: json.h
JSON/src/: DllMain.c  JSON.cpp  definitions.cpp  definitions.h  object.cpp
Memory/: CMakeLists.txt  config.json
Memory/include/: WinType.h  allocate.h  exception.h  memory.h  typeinfo.h
Memory/src/: BE.cpp  C_specific_handler.c  C_specific_handler.h  CommonEndian.c  CommonEndian.h  ConditionVariable.h  CriticalSection.h  ErrorMessage.h  ExceptionHandler.cpp  ExceptionHandler.h  HandlerMap.cpp  HandlerMap.iterator.cpp  LE.cpp  Memory-string.cpp  Memory.cpp  ThreadLocalStorage.c  ThreadLocalStorage.h  TryBlockMap.IRange.cpp  TryBlockMap.cpp  TryBlockMap.iterator.cpp  crt.c  crt.h  definitions.cpp  definitions.h  dllentry.cpp  errno.cpp  exception.cpp  frame.cpp  intrinsic.c  memdef.h  memory.cpp  optnew.cpp  string.cpp  typeinfo.cpp  typeinfod.cpp  winimage.cpp
Miko/: CMakeLists.txt
Miko/src/: main.cpp
Streaming/: CMakeLists.txt  config.json
Streaming/include/: format.h  fully.h  stream.h  streaming.h  streamingapi.h  stringstream.h
Streaming/src/: Streaming.cpp  definitions.h  file.cpp  format.cpp  fully.cpp  stream.cpp  string.cpp
String/: CMakeLists.txt  config.json
String/include/: StringURL.h  hexadecimal.h  sstring.h  stringspec.h
String/src/: BinaryStorage.c  BinaryStorage.h  Hexadecimal.cpp  MWORD.cpp  MWORD.h  String-string.cpp  URL.cpp  definitions.c  definitions.h  sstring.cpp  string.cpp
Timestamp/: CMakeLists.txt  config.json
Timestamp/include/: TimestampSpec.h  calender.h  timestamp.h
Timestamp/src/: Timestamp-calender.cpp  Timestamp.cpp  calender.cpp  definitions.cpp  definitions.h  timedef.cpp
WSA/: CMakeLists.txt  config.json
WSA/include/: Address.h  Socket.h  SocketAddress.h  WSASpec.h  exception.h  fs.h  wsa.h  wsadef.h
WSA/src/: Address.cpp  DllMain.c  ServerSocket.cpp  Socket.cpp  SocketAddress.cpp  WSA-Address.cpp  WSA-Socket.cpp  WSA.cpp  address.cpp  definitions.cpp  definitions.h  dllentry.cpp  exception.cpp  fs.cpp  serversocket.cpp  sockaddr.h  socket.cpp  ws2_32.h  wsa.cpp  wsadef.cpp  wsadef.h
WST/: CMakeLists.txt  config.json
WST/src/: main.cpp
WTM/: CMakeLists.txt  config.json
WTM/include/: WTM.h  WTMSpec.h  cprocess.h  cthread.h
WTM/src/: DllMain.c  definitions.c  definitions.cpp  definitions.h  process.cpp  thread.cpp
compile/: CMakeLists.txt  config.json
compile/res/: compile.rc
compile/src/: compiler.cpp
