cmake_minimum_required(VERSION 3.23)
project(Miko)

set(CMAKE_CXX_STANDARD 11)

#set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(Memory)
add_subdirectory(Timestamp)
add_subdirectory(Compression)
add_subdirectory(String)
add_subdirectory(JSON)
add_subdirectory(Filesystem)
add_subdirectory(Streaming)
add_subdirectory(WSA)
add_subdirectory(HTTP)
add_subdirectory(CWS)
add_subdirectory(WST)
add_subdirectory(Cryptography)
add_subdirectory(WTM)
add_subdirectory(Concurrency)
add_subdirectory(compile)